--- a/src/App.css
+++ b/src/App.css
@@ -179,8 +179,8 @@ body, .app {
 }
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #EF5337; /* Blue */
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #EF5337;
   border-radius: 50%;
   width: 120px;
   height: 120px;
